--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
-  archive_path: /archive.html
+  个人信息_path: /archive.html
   categories_path : /categories.html
   tags_path : /tags.html
   atom_path : /atom.xml
